# llm-data-hub

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  dataset_stats.csv  dataset_stats.md  pyproject.toml  requirements.txt
dataset_collection/: README.md  abstract_mapper_and_filter.py
dataset_collection/code/deepmind_code_contest/: __init__.py  mapper_and_filter.py
dataset_collection/english/gutenberg_canaries/: __init__.py  mapper_and_filter.py
dataset_collection/english/pg19/: __init__.py  mapper_and_filter.py
dataset_collection/english/slimpajama/: __init__.py  mapper_and_filter.py
dataset_collection/french/bnf/: bnf_gallica.py  combine_and_filter_docs.py
dataset_collection/french/culturaX/: __init__.py  mapper_and_filter.py
dataset_collection/french/dila_opendata/: README.md  balo_scraping.ipynb  scraping.py  scrapping.py
dataset_collection/french/french_librispeech_text/: french_librispeech_text.py
dataset_collection/french/french_open_subtitles/: db_converter.py  srt_to_hf_dataset.py
dataset_collection/french/french_transcribed_podcast/: __init__.py  mapper.py  mapper_and_filter.py
dataset_collection/french/french_translated_lyrics/: __init__.py  mapper_and_filter.py
dataset_collection/french/illuin_layout_dataset/: README.md  illuin_layout_dataset.py
dataset_collection/french/illuin_youtube_subtitles/: README.md  illuin_youtube_subtitles_original_script.py  original_dataset_preprocessor.py
dataset_collection/french/oscar/: README.md  __init__.py  mapper_and_filter.py  streaming_usage_example.py
dataset_collection/french/parallel_global_voices_english_french/: process.ipynb
dataset_collection/french/poetry/: README.md  run_trafilatura.py
dataset_collection/french/rcds/: rcds_download.py
dataset_collection/french/theses/: __init__.py  mapper_and_filter.py  theses_script.py
dataset_collection/french/unbabel-fr-en/: load_data.py
dataset_collection/french/web_scraped_translated/: __init__.py  mapper_and_filter.py  process.ipynb
dataset_collection/french/wikipedia/: README.md  (+1 more)
dataset_construction/: README.md  __init__.py  construct_dataset.py  dataset_config.py  fit_tokenizer.py  merge_datasets_low_mem.py  tokenizer_build_script.py  utils.py
dataset_construction/configs/: code_corpus.yaml  english_corpus.yaml  french_corpus.yaml  mock_testing.yaml  pretraining_testing.yaml
dataset_preprocessing/: README.md
dataset_preprocessing/deduplication/: README.md  __init__.py  bloom_filter.py  decontaminate_utils.py  exact.py
dataset_preprocessing/perplexity/: model.py  perplexity_filter.py  perplexity_tagging.py
datasets/: README.md
evaluation_suite/: README.md
mock_training_run/: run.sh  run_clm.py  run_clm.sh  run_mlm.py  run_mlm.sh
mock_training_run/llama_configs/: config.json  config_small.json
scripts/examples/: README.md
tests/test_dataset_loading/: test_feature_compatibility.py  test_gutenberg_french.py  test_oscar_french.py  test_wikipedia.py
(+63 files in other folders)
